--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 						</ul>
 						
@@ -180,7 +179,7 @@
 					<a href="anatomia.html" target="_blank" class="services-link">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-heart"></i>
+								<i class="icon-heart3"></i>
 							</span>
 							<div class="desc">
 								<h3>Anatomia</h3>
@@ -217,57 +216,62 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center animate-box">
+					<a href="diagnoza.html" target="_blank" class="services-link">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-lab2"></i>
+							<i class="icon-heart3"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Science &amp; Technology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Diagnoza</a></h3>
+							<p>Zadbaj o pełne zrozumienie etapów diagnozy, by móc podejmować świadome decyzje dotyczące własnego zdrowia.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center animate-box">
+					<a href="leczenie.html" target="_blank" class="services-link">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-pill"></i>
+							<i class="icon-heart3"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Art &amp; Media</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Leczenie</a></h3>
+							<p>Poznaj różnorodne metody leczenia i ich skuteczność oraz najnowsze postępy w dziedzinie terapii.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center animate-box">
+					<a href="rokowania.html" target="_blank" class="services-link">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-home-outline"></i>
+							<i class="icon-heart3"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Real Estate</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Rokowania</a></h3>
+							<p>Zapoznaj się z różnymi czynnikami wpływającymi na rokowania. Zrozumienie tych elementów pomoże w realistycznym spojrzeniu na perspektywy zdrowotne.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center animate-box">
+					<a href="wsparcie.html" target="_blank" class="services-link">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-bubble3"></i>
+							<i class="icon-heart3"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Language</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Wsparcie</a></h3>
+							<p>Dowiedz się, jak ważne jest budowanie silnej sieci wsparcia społecznego i jak radzić sobie z emocjonalnymi wyzwaniami związanymi z diagnozą i leczeniem. </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center animate-box">
+					<a href="kontakt.html" target="_blank" class="services-link">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-world"></i>
+							<i class="icon-heart3"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Web &amp; Programming</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Kontakt</a></h3>
+							<p>Jeśli masz pytania, wątpliwości lub potrzebujesz dodatkowych informacji na temat raka jajnika, leczenia, czy też po prostu chcesz podzielić się swoimi myślami, napisz.</p>
 						</div>
 					</div>
 				</div>
