--- a/wsparcie.html
+++ b/wsparcie.html
@@ -108,7 +108,6 @@
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li class="active"><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -142,7 +141,12 @@
 	<div id="fh5co-wsparcie" class="fh5co-bg-section">
 	<div style="text-align: left; margin: 0 20%;">
     <h2 style="color:rgb(234, 138, 219);">Lista fundacji onkologicznych</h2>
-	<p>W tej trudnej podróży walki z rakiem jajnika warto skorzystać z pomocy i wsparcia fundacji onkologicznych. Poniżej znajdziesz fundacje, które oferują wsparcie pacjentom onkologicznym. </p>
+	<p>Rak jajnika to trudna i często zaskakująca diagnoza, która niesie ze sobą wiele wyzwań zarówno fizycznych, jak i emocjonalnych. Wspieranie pacjentek w ich walce jest kluczowe, a aspekt psychologiczny odgrywa istotną rolę w procesie leczenia. <span style="color:rgb(234, 138, 219); font weight: bold;">Jakie są opcje wsparcia psychicznego?</span></p>
+	<p><span style="color:rgb(234, 138, 219); font weight: bold;">Indywidualne sesje terapeutyczne. </span> Rozmowy z doświadczonym psychologiem mogą stanowić bezpieczną przestrzeń do wyrażenia uczuć, radzenia sobie z trudnymi emocjami i opracowywania strategii radzenia sobie z chorobą. Terapeuci specjalizujący się w obszarze onkologii są w stanie dostosować podejście do indywidualnych potrzeb pacjentek.</p>
+	<p><span style="color:rgb(234, 138, 219); font weight: bold;">Wsparcie grupowe.</span> Grupy wsparcia stanowią cenne miejsce, gdzie pacjentki mogą dzielić się swoimi doświadczeniami, wymieniać porady i budować silne więzi z innymi, którzy przechodzą przez podobne wyzwania. Wspólna siła grupy może być inspiracją do pokonywania trudności i utrzymania pozytywnego podejścia do leczenia.</p>
+	<p><span style="color: rgb(234, 138, 219); font weight: bold;">Edukacja psychologiczna.</span> Zrozumienie wpływu choroby na psychikę i umiejętność radzenia sobie z emocjami są kluczowe w procesie leczenia. Warsztaty i szkolenia psychologiczne mogą dostarczyć pacjentkom narzędzi do skutecznego zarządzania stresem, lękiem i depresją.</p>
+	<p><span style="color: rgb(234, 138, 219); font weight:bold;">Techniki relaksacyjne i mindfulness. </span> Zrozumienie wpływu choroby na psychikę i umiejętność radzenia sobie z emocjami są kluczowe w procesie leczenia. Warsztaty i szkolenia psychologiczne mogą dostarczyć pacjentkom narzędzi do skutecznego zarządzania stresem, lękiem i depresją.</p>	
+	<p>W tej trudnej podróży walki z rakiem jajnika pomoc niesie wiele fundacji. Poniżej znajdziesz fundacje, które oferują wsparcie pacjentom onkologicznym. </p>
 
 	<ol>
 		<li>STOWARZYSZENIE NIEBIESKI MOTYL</li>
