--- a/klasyfikacja.html
+++ b/klasyfikacja.html
@@ -97,21 +97,18 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active has-dropdown">
+							<li class="has-dropdown">
 								<a href="wiedza.html">O raku jajnika</a>
 								<ul class="dropdown">
-									<ul class="dropdown">
-                                        <li><a href="anatomia.html">Anatomia</a></li>									
-                                        <li><a href="objawy.html">Objawy</a></li>
-                                        <li><a href="klasyfikacja.html">Klasyfikacja</a></li>
-                                        <li><a href="rokowania.html">Rokowania</a></li>
-                                    </ul>
+									<li class="active"><a href="anatomia.html">Anatomia</a></li>									
+									<li><a href="objawy.html">Objawy</a></li>
+									<li class="active"><a href="klasyfikacja.html">Klasyfikacja</a></li>
+									<li><a href="rokowania.html">Rokowania</a></li>
 								</ul>
 							</li>
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -125,7 +122,7 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/o_raku.jpg); background-position: center;">
+		   	<li style="background-image: url(images/klasyfikacja.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
