--- a/rokowania.html
+++ b/rokowania.html
@@ -97,21 +97,18 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active has-dropdown">
+							<li class="has-dropdown">
 								<a href="wiedza.html">O raku jajnika</a>
 								<ul class="dropdown">
-									<ul class="dropdown">
-                                        <li><a href="anatomia.html">Anatomia</a></li>									
-                                        <li><a href="objawy.html">Objawy</a></li>
-                                        <li><a href="klasyfikacja.html">Klasyfikacja</a></li>
-                                        <li><a href="rokowania.html">Rokowania</a></li>
-                                    </ul>
+									<li class="active"><a href="anatomia.html">Anatomia</a></li>									
+									<li><a href="objawy.html">Objawy</a></li>
+									<li><a href="klasyfikacja.html">Klasyfikacja</a></li>
+									<li class="active"><a href="rokowania.html">Rokowania</a></li>
 								</ul>
 							</li>
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -125,7 +122,7 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/o_raku.jpg); background-position: center;">
+		   	<li style="background-image: url(images/rokowanie.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
@@ -145,14 +142,12 @@
 	
 <div id="fh5co-leczenie" class="fh5co-bg-section">	
 <div style="text-align: left; margin: 0 20%;">
-    <p>Prognoza u pacjentek z rakiem jajnika zależy od stopnia zaawansowania klinicznego, możliwości przeprowadzenia kompleksowej cytoredukcji oraz skuteczności terapii systemowej opartej na pochodnych platyny. Wskaźniki 5-letnich przeżyć różnią się w zależności od stopnia zaawansowania według klasyfikacji FIGO:</p>
-    <ul>
-         <li>FIGO I: 89%,</li>
-        <li>FIGO II: 70%,</li>
-        <li>FIGO III: 32%- 46%,</li>
-        <li>FIGO IV: 18%.</li>
-    </ul>
-    <h2 style="color:rgb(234, 138, 219);">Klasyfikacja histopatologiczna raka jajnika</h2>
+	<p>Rokowania raka jajnika są złożonym zagadnieniem, a ich kształtowanie wpływają różnorodne czynniki. Kluczowym aspektem jest <span style="color:rgb(234, 138, 219); font weight: bold;">stadium choroby</span>, gdzie wcześniejsza diagnoza często związana jest z korzystniejszymi perspektywami. <span style="color:rgb(234, 138, 219); font weight: bold;">Wiek</span> pacjentki odgrywa rolę, zwłaszcza młodsze osoby mogą mieć lepsze rokowania. <span style="color:rgb(234, 138, 219); font weight: bold;">Różnice w typach histopatologicznych</span> raka jajnika mają znaczący wpływ na charakterystykę choroby i prognozy.</p>
+	<p><span style="color:rgb(234, 138, 219); font weight: bold;">Stan zdrowia</span> pacjentki oraz jej ogólna kondycja organizmu wpływają na zdolność do znoszenia leczenia i determinują rezultaty terapii. Skuteczność leczenia, ewentualne powikłania i nawroty są istotne dla oceny perspektyw. <span style="color:rgb(234, 138, 219); font weight: bold;">Genetyczne uwarunkowania</span>, zwłaszcza mutacje w genach BRCA1 i BRCA2, mogą zmieniać rokowania, a dziedziczność wpływa na ogólne ryzyko zachorowania.</p>
+	<p>Postęp w dziedzinie terapii, dzięki nowym lekom i technikom, przyczynia się do poprawy rokowań. <span style="color:rgb(234, 138, 219); font weight: bold;">Zdrowy stan psychospołeczny</span>, wsparcie społeczne oraz zdolność radzenia sobie ze stresem również wpływają na przebieg choroby. Istotnym parametrem monitorowania jest poziom markerów nowotworowych, np. CA-125.</p>
+	<p>Statystyki podkreślają znaczenie tych czynników, gdzie wcześniejsza diagnoza skorelowana jest z wyższym odsetkiem wyleczeń. Niemniej jednak, każdy przypadek jest unikalny, a skuteczność leczenia zależy od wielu czynników, co podkreśla potrzebę indywidualnego podejścia do każdej sytuacji. Rokowania w raku jajnika zależą od różnorodnych czynników, przede wszystkim od stopnia zaawansowania choroby. Około 70% pacjentów rozpoczyna leczenie raka jajnika w III lub IV stopniu zaawansowania klinicznego. Wczesne wykrycie guza jajnika często ma charakter przypadkowy. Nowotwór jajnika ze względu na bezobjawowy rozwój we wczesnych fazach, niespecyficzne objawy raka jajnika oraz brak dostępu do skutecznego badania wykrywającego guz na wczesnym etapie, najczęściej diagnozowany jest w późnym stadium zaawansowania klinicznego.</p>
+	<p>Zwłoka w diagnozie prowadzi do konieczności wprowadzenia agresywnego leczenia onkologicznego i niepewnych rokowań. Mimo postępu w technikach operacyjnych i wprowadzenia nowych metod leczenia, globalny odsetek 5-letnich przeżyć utrzymuje się na poziomie około 50%. Perspektywy zależą od stopnia zaawansowania choroby, typu histologicznego guza, wieku pacjentki oraz zakresu przeprowadzonego leczenia operacyjnego i terapii następowej.</p>
+	<p>Statystyki epidemiologiczne ukazują, że rokowania w raku jajnika pogarszają się wraz ze stopniem zaawansowania: I stopień - 93%, II stopień - 70%, III stopień - 37%, IV stopień - 25%. Mimo to, nowoczesne metody leczenia celowanego i immunoterapii oraz prowadzone badania kliniczne nad nowymi terapiami dają nadzieję na poprawę rokowania w raku jajnika. Świadomość tych danych jest istotna dla pacjentek i ich rodzin, umożliwiając bardziej przemyślane podejście do leczenia oraz podkreślając potrzebę współpracy z zespołem medycznym.</p>
 </div>
 
 <div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
